dodelal cart.html, no slomal footer

--- a/cart.html
+++ b/cart.html
@@ -50,9 +50,83 @@
             <h2 class="main-catalog__header__header">SHOPPING CART</h2>            
         </div>
     </section>
-        
+    <main class="cart">
+        <div class="cart__product">
+            <div class="cart__product__item">
+                <img src="img/product_img3.png" class="cart__product__item__img" alt="product">
+                <div class="cart__product__item__description">
+                    <h3 class="cart__product__item__header">MANGO  PEOPLE  T-SHIRT</h3>
+                    <h4 class="cart__product__item__text">
+                        Price:
+                        <p class="cart__product__item__description_mg cart__product__item__description_red">$300</p>
+                    </h4>
+                    <h4 class="cart__product__item__text">
+                        Color:
+                        <p class="cart__product__item__description_mg">Red</p>
+                    </h4>
+                    <h4 class="cart__product__item__text">
+                        Size:
+                        <p class="cart__product__item__description_mg">Xl</p>
+                    </h4>
+                    <h4 class="cart__product__item__text">
+                        Quantity:
+                        <p class="cart__product__item__description_mg cart__product__item__description__box">2</p>
+                    </h4>                    
+                </div>
+                <a href="#" class="cart__product__item__close_img"><img src="img/close_img2.svg" alt="close"></a>
+            </div>
+            <div class="cart__product__item">
+                <img src="img/product_img13.png" class="cart__product__item__img" alt="product">
+                <div class="cart__product__item__description">
+                    <h3 class="cart__product__item__header">MANGO  PEOPLE  T-SHIRT</h3>
+                    <h4 class="cart__product__item__text">
+                        Price:
+                        <p class="cart__product__item__description_mg cart__product__item__description_red">$300</p>
+                    </h4>
+                    <h4 class="cart__product__item__text">
+                        Color:
+                        <p class="cart__product__item__description_mg">Red</p>
+                    </h4>
+                    <h4 class="cart__product__item__text">
+                        Size:
+                        <p class="cart__product__item__description_mg">Xl</p>
+                    </h4>
+                    <h4 class="cart__product__item__text">
+                        Quantity:
+                        <p class="cart__product__item__description_mg cart__product__item__description__box">2</p>
+                    </h4>                    
+                </div>
+                <a href="#" class="cart__product__item__close_img"><img src="img/close_img2.svg" alt="close"></a>
+            </div>
+            <div class="cart__product__buttons">
+                <a href="#" class="cart__product__buttons__item">CLEAR SHOPPING CART</a>
+                <a href="#" class="cart__product__buttons__item">CONTINUE SHOPPING</a> 
+            </div>           
+        </div>
+        <div class="cart__address">
+            <div class="cart__address__form">
+                <h4 class="cart__address__form__header">SHIPPING ADRESS</h4>
+                <input type="text" class="cart__address__form__input" placeholder="Country">
+                <input type="text" class="cart__address__form__input" placeholder="State">
+                <input type="text" class="cart__address__form__input" placeholder="Postcode / Zip">
+                <a href="#" class="cart__address__form__button">GET A QUOTE</a>
+            </div>
+            <div class="cart__address__total">
+                <h4 class="cart__address__total__sub_price">
+                    SUB TOTAL      
+                    <p class="cart__address__total__price_mg">$900</p>
+                </h4>
+                <h4 class="cart__address__total__price">
+                    GRAND TOTAL      
+                    <p class="cart__address__total__price_mg cart__address__total__price_red">$900</p>
+                </h4>
+                <div class="cart__address__total__devider"></div>
+                <a href="#" class="cart__address__total__button">PROCEED TO CHECKOUT</a>
+            </div>
+        </div>
+    </main>
     <footer>
-        <div class="footer__top">
+        <!-- <div class="footer__top">
             <div class="footer__top__container center">
                 <div class="footer__top__item">
                     <img src="img/footer_img1.svg" alt="delivery">
@@ -73,7 +147,7 @@
                         tion with extensive models.</p>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="footer__subscribe center">
             <figure class="footer__subscribe__info">
                 <img src="img/subscribe_img.png" alt="subscribe" class="footer__subscribe__img">
