--- a/product.html
+++ b/product.html
@@ -158,7 +158,7 @@
         </div>        
     </section> 
     <footer>
-        <div class="footer__top">
+        <!-- <div class="footer__top">
             <div class="footer__top__container center">
                 <div class="footer__top__item">
                     <img src="img/footer_img1.svg" alt="delivery">
@@ -179,7 +179,7 @@
                         tion with extensive models.</p>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="footer__subscribe center">
             <figure class="footer__subscribe__info">
                 <img src="img/subscribe_img.png" alt="subscribe" class="footer__subscribe__img">
