--- a/cart.html
+++ b/cart.html
@@ -23,26 +23,26 @@
                 </label>
                 <h5 class="main_menu__header">MENU</h5>
                 <p class="main_menu__section">MAN</p>
-                <a href="#" class="main_menu__item">Accessories</a>
-                <a href="#" class="main_menu__item">Bags</a>
-                <a href="#" class="main_menu__item">Denim</a>
-                <a href="#" class="main_menu__item">T-Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Accessories</a>
+                <a href="catalog.html" class="main_menu__item">Bags</a>
+                <a href="catalog.html" class="main_menu__item">Denim</a>
+                <a href="catalog.html" class="main_menu__item">T-Shirts</a>
                 <p class="main_menu__section">WOMAN</p>
-                <a href="#" class="main_menu__item">Accessories</a>
-                <a href="#" class="main_menu__item">Jackets & Coats</a>
-                <a href="#" class="main_menu__item">Polos</a>
-                <a href="#" class="main_menu__item">T-Shirts</a>
-                <a href="#" class="main_menu__item">Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Accessories</a>
+                <a href="catalog.html" class="main_menu__item">Jackets & Coats</a>
+                <a href="catalog.html" class="main_menu__item">Polos</a>
+                <a href="catalog.html" class="main_menu__item">T-Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Shirts</a>
                 <p class="main_menu__section">KIDS</p>
-                <a href="#" class="main_menu__item">Accessories</a>
-                <a href="#" class="main_menu__item">Jackets & Coats</a>
-                <a href="#" class="main_menu__item">Polos</a>
-                <a href="#" class="main_menu__item">T-Shirts</a>
-                <a href="#" class="main_menu__item">Shirts</a>
-                <a href="#" class="main_menu__item">Bags</a>
+                <a href="catalog.html" class="main_menu__item">Accessories</a>
+                <a href="catalog.html" class="main_menu__item">Jackets & Coats</a>
+                <a href="catalog.html" class="main_menu__item">Polos</a>
+                <a href="catalog.html" class="main_menu__item">T-Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Bags</a>
             </nav>
             <a href="#"><img src="img/account.svg" class="top-header__account" alt="account"></a>
-            <a href="#"><img src="img/trolley.svg" alt="trolley"></a>
+            <a href="cart.html"><img src="img/trolley.svg" alt="trolley"></a>
         </div>
     </header>
     <section class="main-catalog__header__container">
@@ -100,7 +100,7 @@
             </div>
             <div class="cart__product__buttons">
                 <a href="#" class="cart__product__buttons__item">CLEAR SHOPPING CART</a>
-                <a href="#" class="cart__product__buttons__item">CONTINUE SHOPPING</a> 
+                <a href="catalog.html" class="cart__product__buttons__item">CONTINUE SHOPPING</a> 
             </div>           
         </div>
         <div class="cart__address">
@@ -125,29 +125,7 @@
             </div>
         </div>
     </main>
-    <footer>
-        <!-- <div class="footer__top">
-            <div class="footer__top__container center">
-                <div class="footer__top__item">
-                    <img src="img/footer_img1.svg" alt="delivery">
-                    <h3 class="footer__top__header">Free Delivery</h3>
-                    <p class="footer__top__text">Worldwide delivery on all. Authorit tively morph next-generation innov
-                        tion with extensive models.</p>
-                </div>
-                <div class="footer__top__item">
-                    <img src="img/footer_img2.svg" alt="sales">
-                    <h3 class="footer__top__header">Sales & discounts</h3>
-                    <p class="footer__top__text">Worldwide delivery on all. Authorit tively morph next-generation innov
-                        tion with extensive models.</p>
-                </div>
-                <div class="footer__top__item">
-                    <img src="img/footer_img3.svg" alt="quality">
-                    <h3 class="footer__top__header">Quality assurance</h3>
-                    <p class="footer__top__text">Worldwide delivery on all. Authorit tively morph next-generation innov
-                        tion with extensive models.</p>
-                </div>
-            </div>
-        </div> -->
+    <footer>        
         <div class="footer__subscribe center">
             <figure class="footer__subscribe__info">
                 <img src="img/subscribe_img.png" alt="subscribe" class="footer__subscribe__img">
