--- a/catalog.html
+++ b/catalog.html
@@ -23,26 +23,26 @@
                 </label>
                 <h5 class="main_menu__header">MENU</h5>
                 <p class="main_menu__section">MAN</p>
-                <a href="#" class="main_menu__item">Accessories</a>
-                <a href="#" class="main_menu__item">Bags</a>
-                <a href="#" class="main_menu__item">Denim</a>
-                <a href="#" class="main_menu__item">T-Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Accessories</a>
+                <a href="catalog.html" class="main_menu__item">Bags</a>
+                <a href="catalog.html" class="main_menu__item">Denim</a>
+                <a href="catalog.html" class="main_menu__item">T-Shirts</a>
                 <p class="main_menu__section">WOMAN</p>
-                <a href="#" class="main_menu__item">Accessories</a>
-                <a href="#" class="main_menu__item">Jackets & Coats</a>
-                <a href="#" class="main_menu__item">Polos</a>
-                <a href="#" class="main_menu__item">T-Shirts</a>
-                <a href="#" class="main_menu__item">Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Accessories</a>
+                <a href="catalog.html" class="main_menu__item">Jackets & Coats</a>
+                <a href="catalog.html" class="main_menu__item">Polos</a>
+                <a href="catalog.html" class="main_menu__item">T-Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Shirts</a>
                 <p class="main_menu__section">KIDS</p>
-                <a href="#" class="main_menu__item">Accessories</a>
-                <a href="#" class="main_menu__item">Jackets & Coats</a>
-                <a href="#" class="main_menu__item">Polos</a>
-                <a href="#" class="main_menu__item">T-Shirts</a>
-                <a href="#" class="main_menu__item">Shirts</a>
-                <a href="#" class="main_menu__item">Bags</a>
+                <a href="catalog.html" class="main_menu__item">Accessories</a>
+                <a href="catalog.html" class="main_menu__item">Jackets & Coats</a>
+                <a href="catalog.html" class="main_menu__item">Polos</a>
+                <a href="catalog.html" class="main_menu__item">T-Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Bags</a>
             </nav>
             <a href="#"><img src="img/account.svg" class="top-header__account" alt="account"></a>
-            <a href="#"><img src="img/trolley.svg" alt="trolley"></a>
+            <a href="cart.html"><img src="img/trolley.svg" alt="trolley"></a>
         </div>
     </header>
     <section class="main-catalog__header__container">
@@ -51,8 +51,8 @@
             <nav>
                 <ul class="main-catalog__breadcrumbs">
                     <li class="breadcrumbs__item"><a href="index.html" class="breadcrumbs__item__ref">HOME</a></li>
-                    <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__item__ref">MEN</a></li>
-                    <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__item__ref">NEW ARRIVALS</a></li>
+                    <li class="breadcrumbs__item"><a href="catalog.html" class="breadcrumbs__item__ref">MEN</a></li>
+                    <li class="breadcrumbs__item"><a href="catalog.html" class="breadcrumbs__item__ref">NEW ARRIVALS</a></li>
                 </ul>
             </nav>
         </div>
@@ -143,11 +143,11 @@
     </section>
     <section class="main-catalog__product center">
         <div class="product__card">
-            <a href="#">
+            <a href="product.html">
                 <img src="img/product_img1.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="cart.html" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
@@ -155,11 +155,11 @@
             <p class="product__card__price">$52.00</p>
         </div>
         <div class="product__card">
-            <a href="#">
+            <a href="product.html">
                 <img src="img/product_img13.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="cart.html" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
@@ -167,11 +167,11 @@
             <p class="product__card__price">$52.00</p>
         </div>
         <div class="product__card">
-            <a href="#">
+            <a href="product.html">
                 <img src="img/product_img3.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="cart.html" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
@@ -179,11 +179,11 @@
             <p class="product__card__price">$52.00</p>
         </div>
         <div class="product__card">
-            <a href="#">
+            <a href="product.html">
                 <img src="img/product_img4.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="cart.html" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
@@ -191,11 +191,11 @@
             <p class="product__card__price">$52.00</p>
         </div>
         <div class="product__card">
-            <a href="#">
+            <a href="product.html">
                 <img src="img/product_img9.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="cart.html" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
@@ -203,11 +203,11 @@
             <p class="product__card__price">$52.00</p>
         </div>
         <div class="product__card">
-            <a href="#">
+            <a href="product.html">
                 <img src="img/product_img10.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="cart.html" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
@@ -215,11 +215,11 @@
             <p class="product__card__price">$52.00</p>
         </div>
         <div class="product__card">
-            <a href="#">
+            <a href="product.html">
                 <img src="img/product_img11.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="cart.html" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
@@ -227,11 +227,11 @@
             <p class="product__card__price">$52.00</p>
         </div>
         <div class="product__card">
-            <a href="#">
+            <a href="product.html">
                 <img src="img/product_img12.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="cart.html" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
@@ -239,11 +239,11 @@
             <p class="product__card__price">$52.00</p>
         </div>
         <div class="product__card">
-            <a href="#">
+            <a href="product.html">
                 <img src="img/product_img14.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="cart.html" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
