--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="top-header">
+        <header class="top-header">
         <div class="top-header__left">
             <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
             <a href="#"><img src="img/search.svg" class="top-header__search" alt="search"></a>
@@ -23,26 +23,26 @@
                 </label>
                 <h5 class="main_menu__header">MENU</h5>
                 <p class="main_menu__section">MAN</p>
-                <a href="#" class="main_menu__item">Accessories</a>
-                <a href="#" class="main_menu__item">Bags</a>
-                <a href="#" class="main_menu__item">Denim</a>
-                <a href="#" class="main_menu__item">T-Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Accessories</a>
+                <a href="catalog.html" class="main_menu__item">Bags</a>
+                <a href="catalog.html" class="main_menu__item">Denim</a>
+                <a href="catalog.html" class="main_menu__item">T-Shirts</a>
                 <p class="main_menu__section">WOMAN</p>
-                <a href="#" class="main_menu__item">Accessories</a>
-                <a href="#" class="main_menu__item">Jackets & Coats</a>
-                <a href="#" class="main_menu__item">Polos</a>
-                <a href="#" class="main_menu__item">T-Shirts</a>
-                <a href="#" class="main_menu__item">Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Accessories</a>
+                <a href="catalog.html" class="main_menu__item">Jackets & Coats</a>
+                <a href="catalog.html" class="main_menu__item">Polos</a>
+                <a href="catalog.html" class="main_menu__item">T-Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Shirts</a>
                 <p class="main_menu__section">KIDS</p>
-                <a href="#" class="main_menu__item">Accessories</a>
-                <a href="#" class="main_menu__item">Jackets & Coats</a>
-                <a href="#" class="main_menu__item">Polos</a>
-                <a href="#" class="main_menu__item">T-Shirts</a>
-                <a href="#" class="main_menu__item">Shirts</a>
-                <a href="#" class="main_menu__item">Bags</a>
+                <a href="catalog.html" class="main_menu__item">Accessories</a>
+                <a href="catalog.html" class="main_menu__item">Jackets & Coats</a>
+                <a href="catalog.html" class="main_menu__item">Polos</a>
+                <a href="catalog.html" class="main_menu__item">T-Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Shirts</a>
+                <a href="catalog.html" class="main_menu__item">Bags</a>
             </nav>
             <a href="#"><img src="img/account.svg" class="top-header__account" alt="account"></a>
-            <a href="#"><img src="img/trolley.svg" alt="trolley"></a>
+            <a href="cart.html"><img src="img/trolley.svg" alt="trolley"></a>
         </div>
     </header>
     <section class="main-catalog__header__container">
@@ -51,7 +51,7 @@
             <nav>
                 <ul class="main-catalog__breadcrumbs">
                     <li class="breadcrumbs__item"><a href="index.html" class="breadcrumbs__item__ref">HOME</a></li>
-                    <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__item__ref">MEN</a></li>
+                    <li class="breadcrumbs__item"><a href="catalog.html" class="breadcrumbs__item__ref">MEN</a></li>
                     <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__item__ref">NEW ARRIVALS</a></li>
                 </ul>
             </nav>
@@ -112,7 +112,7 @@
                         <img src="img/filter_img2.svg" class="product_description__chooser__img" alt="toggle">
                     </div>
                 </div>
-                <a href="#" class="product_description__button">
+                <a href="cart.html" class="product_description__button">
                     <img src="img/cart_img.svg" class="product_description__button__img" alt="cart">
                     Add to Cart
                 </a>
@@ -121,11 +121,11 @@
     </section>
     <section class="main-catalog__product center">
         <div class="product__card">
-            <a href="#">
+            <a href="product.html">
                 <img src="img/product_img1.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="cart.html" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
@@ -133,11 +133,11 @@
             <p class="product__card__price">$52.00</p>
         </div>
         <div class="product__card">
-            <a href="#">
+            <a href="product.html">
                 <img src="img/product_img13.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="cart.html" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
@@ -145,11 +145,11 @@
             <p class="product__card__price">$52.00</p>
         </div>
         <div class="product__card">
-            <a href="#">
+            <a href="product.html">
                 <img src="img/product_img3.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="#" class="product__button_hover">
+            <a href="cart.html" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
@@ -157,29 +157,7 @@
             <p class="product__card__price">$52.00</p>
         </div>        
     </section> 
-    <footer>
-        <!-- <div class="footer__top">
-            <div class="footer__top__container center">
-                <div class="footer__top__item">
-                    <img src="img/footer_img1.svg" alt="delivery">
-                    <h3 class="footer__top__header">Free Delivery</h3>
-                    <p class="footer__top__text">Worldwide delivery on all. Authorit tively morph next-generation innov
-                        tion with extensive models.</p>
-                </div>
-                <div class="footer__top__item">
-                    <img src="img/footer_img2.svg" alt="sales">
-                    <h3 class="footer__top__header">Sales & discounts</h3>
-                    <p class="footer__top__text">Worldwide delivery on all. Authorit tively morph next-generation innov
-                        tion with extensive models.</p>
-                </div>
-                <div class="footer__top__item">
-                    <img src="img/footer_img3.svg" alt="quality">
-                    <h3 class="footer__top__header">Quality assurance</h3>
-                    <p class="footer__top__text">Worldwide delivery on all. Authorit tively morph next-generation innov
-                        tion with extensive models.</p>
-                </div>
-            </div>
-        </div> -->
+    <footer>        
         <div class="footer__subscribe center">
             <figure class="footer__subscribe__info">
                 <img src="img/subscribe_img.png" alt="subscribe" class="footer__subscribe__img">
