--- a/registration.html
+++ b/registration.html
@@ -41,7 +41,7 @@
                 <a href="catalog.html" class="main_menu__item">Shirts</a>
                 <a href="catalog.html" class="main_menu__item">Bags</a>
             </nav>
-            <a href="#"><img src="img/account.svg" class="top-header__account" alt="account"></a>
+            <a href="registration.html"><img src="img/account.svg" class="top-header__account" alt="account"></a>
             <a href="cart.html"><img src="img/trolley.svg" alt="trolley"></a>
         </div>
     </header>
@@ -69,7 +69,7 @@
                 <input type="password" class="registration-form__input" placeholder="Password" minlength="8">
                 <p class="registration-form__password-text">Please use 8 or more characters, with at least 1 number and a mixture of uppercase and lowercase letters</p>
                 <input type="submit" class="registration-form__button" value="JOIN NOW">
-                <img src="img/button-arrow.svg" class="button__add-img" alt="">
+                <img src="img/button-arrow.svg" class="button__add-img" alt="arrow">
             </form>
         </div>
         <div class="registration-info">
