--- a/product.html
+++ b/product.html
@@ -41,7 +41,7 @@
                 <a href="catalog.html" class="main_menu__item">Shirts</a>
                 <a href="catalog.html" class="main_menu__item">Bags</a>
             </nav>
-            <a href="#"><img src="img/account.svg" class="top-header__account" alt="account"></a>
+            <a href="registration.html"><img src="img/account.svg" class="top-header__account" alt="account"></a>
             <a href="cart.html"><img src="img/trolley.svg" alt="trolley"></a>
         </div>
     </header>
