--- a/product.html
+++ b/product.html
@@ -9,13 +9,13 @@
 <body>
         <header class="top-header">
         <div class="top-header__left">
-            <a href="index.html"><img src="img/logo.svg" alt="logo"></a>
+            <a href="index.html"><img src="img/logo.svg" class="top-header__logo" alt="logo"></a>
             <a href="#"><img src="img/search.svg" class="top-header__search" alt="search"></a>
         </div>
         <div class="top-header__right">
             <input type="checkbox" id="main_menu">
             <label for="main_menu">
-                <img src="img/menu.svg" alt="menu">
+                <img src="img/menu.svg" class="top-header__main-menu" alt="menu">
             </label>
             <nav>
                 <label for="main_menu" class="close_icon">
@@ -42,7 +42,7 @@
                 <a href="catalog.html" class="main_menu__item">Bags</a>
             </nav>
             <a href="registration.html"><img src="img/account.svg" class="top-header__account" alt="account"></a>
-            <a href="cart.html"><img src="img/trolley.svg" alt="trolley"></a>
+            <a href="cart.html"><img src="img/trolley.svg" class="top-header__cart" alt="trolley"></a>
         </div>
     </header>
     <section class="main-catalog__header__container">
@@ -112,7 +112,7 @@
                         <img src="img/filter_img2.svg" class="product_description__chooser__img" alt="toggle">
                     </div>
                 </div>
-                <a href="cart.html" class="product_description__button">
+                <a href="#" class="product_description__button">
                     <img src="img/cart_img.svg" class="product_description__button__img" alt="cart">
                     Add to Cart
                 </a>
@@ -125,7 +125,7 @@
                 <img src="img/product_img1.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="cart.html" class="product__button_hover">
+            <a href="#" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
@@ -137,7 +137,7 @@
                 <img src="img/product_img13.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="cart.html" class="product__button_hover">
+            <a href="#" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
@@ -149,7 +149,7 @@
                 <img src="img/product_img3.png" class="product__img" alt="product">
                 <h4 class="product__card__header">ELLERY X M'O CAPSULE</h4>
             </a>
-            <a href="cart.html" class="product__button_hover">
+            <a href="#" class="product__button_hover">
                 <img src="img/trolley-hover.svg" alt="cart">
                 Add to Cart
             </a>
