cart.html remake to BEM

--- a/cart.html
+++ b/cart.html
@@ -52,77 +52,77 @@
         </div>
     </section>
     <main class="cart">
-        <div class="cart__product">
-            <div class="cart__product__item">
-                <img src="img/product_img3.png" class="cart__product__item__img" alt="product">
-                <div class="cart__product__item__description">
-                    <h3 class="cart__product__item__header"><a href="product.html" class="product-card_color">MANGO  PEOPLE  T-SHIRT</a></h3>
-                    <h4 class="cart__product__item__text">
+        <div>
+            <div class="cart-card">
+                <img src="img/product_img3.png" class="cart-card__img" alt="product">
+                <div class="cart-card__description">
+                    <h3 class="cart-card__header"><a href="product.html" class="cart-card__header_color">MANGO  PEOPLE  T-SHIRT</a></h3>
+                    <h4 class="cart-card__text">
                         Price:
-                        <p class="cart__product__item__description_mg cart__product__item__description_red">$300</p>
+                        <p class="cart-card__description_mg cart-card__description_red">$300</p>
                     </h4>
-                    <h4 class="cart__product__item__text">
+                    <h4 class="cart-card__text">
                         Color:
-                        <p class="cart__product__item__description_mg">Red</p>
+                        <p class="cart-card__description_mg">Red</p>
                     </h4>
-                    <h4 class="cart__product__item__text">
+                    <h4 class="cart-card__text">
                         Size:
-                        <p class="cart__product__item__description_mg">Xl</p>
+                        <p class="cart-card__description_mg">Xl</p>
                     </h4>
-                    <h4 class="cart__product__item__text">
+                    <h4 class="cart-card__text">
                         Quantity:                        
-                        <input type="number" class="cart__product__item__description__box" min="1" max="9">
+                        <input type="number" class="cart-card__box" min="1" max="9">
                     </h4>                    
                 </div>
-                <a href="#" class="cart__product__item__close_img"><img src="img/close_img2.svg" alt="close"></a>
+                <a href="#" class="cart-card__close-img"><img src="img/close_img2.svg" alt="close"></a>
             </div>
-            <div class="cart__product__item">
-                <img src="img/product_img13.png" class="cart__product__item__img" alt="product">
-                <div class="cart__product__item__description">
-                    <h3 class="cart__product__item__header"><a href="product.html" class="product-card_color">MANGO  PEOPLE  T-SHIRT</a></h3>
-                    <h4 class="cart__product__item__text">
+            <div class="cart-card">
+                <img src="img/product_img13.png" class="cart-card__img" alt="product">
+                <div class="cart-card__description">
+                    <h3 class="cart-card__header"><a href="product.html" class="cart-card__header_color">MANGO  PEOPLE  T-SHIRT</a></h3>
+                    <h4 class="cart-card__text">
                         Price:
-                        <p class="cart__product__item__description_mg cart__product__item__description_red">$300</p>
+                        <p class="cart-card__description_mg cart-card__description_red">$300</p>
                     </h4>
-                    <h4 class="cart__product__item__text">
+                    <h4 class="cart-card__text">
                         Color:
-                        <p class="cart__product__item__description_mg">Red</p>
+                        <p class="cart-card__description_mg">Red</p>
                     </h4>
-                    <h4 class="cart__product__item__text">
+                    <h4 class="cart-card__text">
                         Size:
-                        <p class="cart__product__item__description_mg">Xl</p>
+                        <p class="cart-card__description_mg">Xl</p>
                     </h4>
-                    <h4 class="cart__product__item__text">
+                    <h4 class="cart-card__text">
                         Quantity:
-                        <input type="number" class="cart__product__item__description__box" min="1" max="9">
+                        <input type="number" class="cart-card__box" min="1" max="9">
                     </h4>                    
                 </div>
-                <a href="#" class="cart__product__item__close_img"><img src="img/close_img2.svg" alt="close"></a>
+                <a href="#" class="cart-card__close-img"><img src="img/close_img2.svg" alt="close"></a>
             </div>
-            <div class="cart__product__buttons">
-                <a href="#" class="cart__product__buttons__item">CLEAR SHOPPING CART</a>
-                <a href="catalog.html" class="cart__product__buttons__item">CONTINUE SHOPPING</a> 
+            <div class="cart-buttons">
+                <a href="#" class="cart-buttons__btn">CLEAR SHOPPING CART</a>
+                <a href="catalog.html" class="cart-buttons__btn">CONTINUE SHOPPING</a> 
             </div>           
         </div>
-        <form class="cart__address">
-            <div class="cart__address__form">
-                <h4 class="cart__address__form__header">SHIPPING ADRESS</h4>
-                <input type="text" class="cart__address__form__input" placeholder="Country">
-                <input type="text" class="cart__address__form__input" placeholder="State">
-                <input type="text" class="cart__address__form__input" placeholder="Postcode / Zip">
-                <a href="#" class="cart__address__form__button">GET A QUOTE</a>
+        <form class="address">
+            <div class="address__form">
+                <h4 class="address__header">SHIPPING ADRESS</h4>
+                <input type="text" class="address__input" placeholder="Country">
+                <input type="text" class="address__input" placeholder="State">
+                <input type="text" class="address__input" placeholder="Postcode / Zip">
+                <a href="#" class="address__button">GET A QUOTE</a>
             </div>
-            <div class="cart__address__total">
-                <h4 class="cart__address__total__sub_price">
+            <div class="quote">
+                <h4 class="quote__sub-price">
                     SUB TOTAL      
-                    <p class="cart__address__total__price_mg">$900</p>
+                    <p class="quote__price_mg">$900</p>
                 </h4>
-                <h4 class="cart__address__total__price">
+                <h4 class="quote__price">
                     GRAND TOTAL      
-                    <p class="cart__address__total__price_mg cart__address__total__price_red">$900</p>
+                    <p class="quote__price_mg quote__price_red">$900</p>
                 </h4>
-                <div class="cart__address__total__devider"></div>
-                <a href="#" class="cart__address__total__button">PROCEED TO CHECKOUT</a>
+                <div class="quote__devider"></div>
+                <a href="#" class="quote__button">PROCEED TO CHECKOUT</a>
             </div>
         </form>
     </main>
