--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-        <header class="top-header">
+    <header class="top-header">
         <div class="top-header__left">
             <a href="index.html"><img src="img/logo.svg" class="top-header__logo" alt="logo"></a>
             <a href="#"><img src="img/search.svg" class="top-header__search" alt="search"></a>
@@ -58,33 +58,33 @@
         </div>
     </section>
     <section class="slider">
-        <div class="arrow_box">
-            <a href="#"><img src="img/slider_arrow_left.svg" class="slider_arrows" alt="arrow"></a> 
+        <div class="slider__arrow-box">
+            <a href="#"><img src="img/slider_arrow_left.svg" class="slider__arrows" alt="arrow"></a> 
         </div>       
         <img src="img/slider_img.png" class="slider__img" alt="product photo">        
-        <div class="arrow_box">
-            <a href="#"><img src="img/slider_arrow_right.svg" class="slider_arrows slider_arrow_right_filter" alt="arrow"></a> 
+        <div class="slider__arrow-box">
+            <a href="#"><img src="img/slider_arrow_right.svg" class="slider__arrows" alt="arrow"></a> 
         </div> 
     </section>
-    <section class="product_description">
-        <div class="product_description__container">
-            <div class="product_description_position">
-                <div class="product_description_top">
-                    <h3 class="product_description__header">WOMEN COLLECTION</h3>
-                    <div class="product_description__devider"></div>
-                    <h4 class="product_description__subheader">MOSCHINO CHEAP AND CHIC</h4>
-                    <p class="product_description_top__text">Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate collaborative architectures before cutting-edge services. Completely visualize parallel core competencies rather than exceptional portals. </p>
-                    <p class="product_description__price">$561</p>
+    <section class="product-description">
+        <div class="product-description__container">
+            <div class="product-description__position">
+                <div class="product-description__top">
+                    <h3 class="product-description__header">WOMEN COLLECTION</h3>
+                    <div class="product-description__devider"></div>
+                    <h4 class="product-description__subheader">MOSCHINO CHEAP AND CHIC</h4>
+                    <p class="product-description__text">Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate collaborative architectures before cutting-edge services. Completely visualize parallel core competencies rather than exceptional portals. </p>
+                    <p class="product-description__price">$561</p>
                 </div>
-                <div class="product_description__chooser">
-                    <div class="product_description__chooser__item">
+                <div class="chooser">
+                    <div class="chooser__item">
                         CHOOSE COLOR
-                        <img src="img/filter_img2.svg" class="product_description__chooser__img" alt="toggle">
+                        <img src="img/filter_img2.svg" class="chooser__img" alt="toggle">
                     </div>
-                    <div class="product_description__chooser__item">
+                    <div class="chooser__item">
                         CHOOSE SIZE
-                        <img src="img/filter_img2.svg" class="product_description__chooser__img" alt="toggle">
-                        <nav class="product_description__chooser__navbar">
+                        <img src="img/filter_img2.svg" class="chooser__img" alt="toggle">
+                        <nav class="chooser__navbar">
                             <label class="filter__center__add_checkbox">
                                 <input type="checkbox" class="checkbox_visible">
                                 <div class="add_checkbox"></div>
@@ -107,13 +107,13 @@
                             </label>                    
                         </nav>
                     </div>
-                    <div class="product_description__chooser__item">
+                    <div class="chooser__item">
                         QUANTITY
-                        <img src="img/filter_img2.svg" class="product_description__chooser__img" alt="toggle">
+                        <img src="img/filter_img2.svg" class="chooser__img" alt="toggle">
                     </div>
                 </div>
-                <a href="#" class="product_description__button">
-                    <img src="img/cart_img.svg" class="product_description__button__img" alt="cart">
+                <a href="#" class="add-to-cart-btn">
+                    <img src="img/cart_img.svg" class="add-to-cart-btn__img" alt="cart">
                     Add to Cart
                 </a>
             </div>
