--- a/catalog.html
+++ b/catalog.html
@@ -57,87 +57,85 @@
             </nav>
         </div>
     </section>
-    <section class="main-catalog__filter">
-        <div class="filter__menu">
-            <input class="filter__menu__input" type="checkbox" id="filter">
-            <label for="filter" class="filter__menu__text">
+    <section class="filter-menu_position">
+        <div class="filter-menu">
+            <input class="filter-menu__input" type="checkbox" id="filter">
+            <label for="filter" class="filter-menu__text">
                 FILTER
-                <img src="img/filter_img.svg" class="filter__img_mg" alt="toggle">
+                <img src="img/filter_img.svg" class="filter-menu__img_mg" alt="toggle">
             </label>
-            <nav class="filter__menu__navbar">
-                <input class="filter__menu__input" type="checkbox" id="filter">
-                <label for="filter" class="filter__menu__text_red">
+            <nav class="filter-menu__navbar">
+                <input class="filter-menu__input" type="checkbox" id="filter">
+                <label for="filter" class="filter-menu__text_red">
                 FILTER
-                <img src="img/filter_img_red.svg" class="filter__img_mg" alt="toggle">
-                <details class="filter__menu__details" open>
+                <img src="img/filter_img_red.svg" class="filter-menu__img_mg" alt="toggle">
+                <details class="filter-menu__details" open>
                     <summary>CATEGORY</summary>
-                    <div class="filter__menu__category">
-                        <a href="#" class="filter__menu__ref">Accessories</a>
-                        <a href="#" class="filter__menu__ref">Bags</a>
-                        <a href="#" class="filter__menu__ref">Denim</a>
-                        <a href="#" class="filter__menu__ref">Hoodies & Sweatshirts</a>
-                        <a href="#" class="filter__menu__ref">Jackets & Coats</a>
-                        <a href="#" class="filter__menu__ref">Polos</a>
-                        <a href="#" class="filter__menu__ref">Shirts</a>
-                        <a href="#" class="filter__menu__ref">Shoes</a>
-                        <a href="#" class="filter__menu__ref">Sweaters & Knits</a>
-                        <a href="#" class="filter__menu__ref">T-Shirts</a>
-                        <a href="#" class="filter__menu__ref">Tanks</a>
+                    <div class="filter-menu__category">
+                        <a href="#" class="filter-menu__ref">Accessories</a>
+                        <a href="#" class="filter-menu__ref">Bags</a>
+                        <a href="#" class="filter-menu__ref">Denim</a>
+                        <a href="#" class="filter-menu__ref">Hoodies & Sweatshirts</a>
+                        <a href="#" class="filter-menu__ref">Jackets & Coats</a>
+                        <a href="#" class="filter-menu__ref">Polos</a>
+                        <a href="#" class="filter-menu__ref">Shirts</a>
+                        <a href="#" class="filter-menu__ref">Shoes</a>
+                        <a href="#" class="filter-menu__ref">Sweaters & Knits</a>
+                        <a href="#" class="filter-menu__ref">T-Shirts</a>
+                        <a href="#" class="filter-menu__ref">Tanks</a>
                     </div>
                 </details>
-                <details class="filter__menu__details">
+                <details class="filter-menu__details">
                     <summary>BRAND</summary>
                 </details>
-                <details class="filter__menu__details">
+                <details class="filter-menu__details">
                     <summary>DESIGNER</summary>
                 </details>
             </nav>
         </div>
-        <div class="main-catalog__filter__center">
-            <div class="filter__center__menu">
+        <div class="chooser-checkbox_position">
+            <div class="chooser-checkbox">
                 <input type="checkbox">
                 <label for="#">
                     TRENDING NOW
-                    <img src="img/filter_img2.svg" class="filter_img2_mg" alt="toggle">
+                    <img src="img/filter_img2.svg" class="chooser-checkbox__img" alt="toggle">
                 </label>
-                <nav class="filter__menu__navbar"></nav>
             </div>            
-            <div class="filter__center__menu">
-                <input type="checkbox" id="filter2" class="filter__center__input">
+            <div class="chooser-checkbox">
+                <input type="checkbox" id="filter2" class="chooser-checkbox__input">
                 <label for="filter2">
                     SIZE 
-                    <img src="img/filter_img2.svg" class="filter_img2_mg" alt="toggle">
+                    <img src="img/filter_img2.svg" class="chooser-checkbox__img" alt="toggle">
                 </label>
-                <nav class="filter__center__navbar">
-                    <label class="filter__center__add_checkbox">
-                        <input type="checkbox" class="checkbox_visible">
-                        <div class="add_checkbox"></div>
+                <nav class="chooser-checkbox__navbar">
+                    <label class="chooser-checkbox__checkbox_position">
+                        <input type="checkbox" class="chooser-checkbox__checkbox_visible">
+                        <div class="chooser-checkbox__checkbox"></div>
                         XS
                     </label>
-                    <label class="filter__center__add_checkbox">
-                        <input type="checkbox" class="checkbox_visible">
-                        <div class="add_checkbox"></div>
+                    <label class="chooser-checkbox__checkbox_position">
+                        <input type="checkbox" class="chooser-checkbox__checkbox_visible">
+                        <div class="chooser-checkbox__checkbox"></div>
                         S
                     </label>
-                    <label class="filter__center__add_checkbox">
-                        <input type="checkbox" class="checkbox_visible">
-                        <div class="add_checkbox"></div>
+                    <label class="chooser-checkbox__checkbox_position">
+                        <input type="checkbox" class="chooser-checkbox__checkbox_visible">
+                        <div class="chooser-checkbox__checkbox"></div>
                         M
                     </label>
-                    <label class="filter__center__add_checkbox">
-                        <input type="checkbox" class="checkbox_visible">
-                        <div class="add_checkbox"></div>
+                    <label class="chooser-checkbox__checkbox_position">
+                        <input type="checkbox" class="chooser-checkbox__checkbox_visible">
+                        <div class="chooser-checkbox__checkbox"></div>
                         L
                     </label>                    
                 </nav>
             </div>            
-            <div class="filter__center__menu">
+            <div class="chooser-checkbox">
                 <input type="checkbox">
                 <label>
                     PRICE
-                    <img src="img/filter_img2.svg" class="filter_img2_mg" alt="toggle">
+                    <img src="img/filter_img2.svg" class="chooser-checkbox__img" alt="toggle">
                 </label>
-                <nav class="filter__menu__navbar"></nav>
             </div>            
         </div>
     </section>
@@ -253,16 +251,16 @@
     </section>
     <nav class="pagination">
         <div>
-            <ul class="pagination__container">
-                <li><a href="#" class="pagination_item"><img src="img/left_arrow.svg" alt="left arrow"></a></li>
+            <ul class="pagination_position">
+                <li><a href="#"><img src="img/left_arrow.svg" alt="left arrow"></a></li>
                 <li><a href="#" class="pagination__item">1</a></li>
                 <li><a href="#" class="pagination__item">2</a></li>
                 <li><a href="#" class="pagination__item">3</a></li>
                 <li><a href="#" class="pagination__item">4</a></li>
                 <li><a href="#" class="pagination__item">5</a></li>
                 <li><a href="#" class="pagination__item">6</a></li>
-                <li><a href="#" class="pagination__item pagination__item_notmg">.....20</a></li>
-                <li><a href="#" class="pagination_item"><img src="img/right_arrow.svg" alt="right arrow"></a></li>
+                <li><a href="#" class="pagination__item pagination__item_no-mg">.....20</a></li>
+                <li><a href="#"><img src="img/right_arrow.svg" alt="right arrow"></a></li>
             </ul>
         </div>
     </nav>
